--- a/mbn-front/mbn/package.json
+++ b/mbn-front/mbn/package.json
@@ -8,6 +8,7 @@
     "framer-motion": "^1.11.1",
     "gatsby": "^2.23.20",
     "gatsby-image": "^2.4.12",
+    "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.17",
     "gatsby-plugin-offline": "^3.2.16",
     "gatsby-plugin-react-helmet": "^3.3.10",
@@ -58,5 +59,3 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   }
 }
-
-
